# VINS-Fusion

./: .gitignore
camera_models/: CMakeLists.txt
loop_fusion/: CMakeLists.txt
loop_fusion/src/: keyframe.cpp  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
loop_fusion/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
vins_estimator/: CMakeLists.txt
vins_estimator/src/: main.cpp
vins_estimator/src/estimator/: estimator.cpp
vins_estimator/src/utility/: udp_packet.h  visualization.cpp  visualization.h
